build_error.txt
    Checking kartana v0.1.0 (C:\Projects\OwnProjects\Kartana)
error[E0583]: file not found for module `block_decoration`
 --> src\aozora_parser.rs:1:1
  |
1 | mod block_decoration;
  | ^^^^^^^^^^^^^^^^^^^^^
  |
  = help: to create the module `block_decoration`, create file "src\aozora_parser\block_decoration.rs" or "src\aozora_parser\block_decoration\mod.rs"
  = note: if there is a `mod block_decoration` elsewhere in the crate already, import it with `use crate::...` instead

warning: unused import: `CommandToken`
 --> src\aozora_parser\parser.rs:3:58
  |
3 | use crate::aozora_parser::tokenizer::{self, AozoraToken, CommandToken, TextToken};
  |                                                          ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::path::PathBuf`
 --> src\editor_page.rs:2:5
  |
2 | use std::path::PathBuf;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `Path`
 --> src\top_page\works.rs:6:12
  |
6 |     path::{Path, PathBuf},
  |            ^^^^

warning: variable does not need to be mutable
  --> src\aozora_parser\block_parser.rs:45:17
   |
45 |             let mut finished_block = stack.pop().unwrap();
   |                 ----^^^^^^^^^^^^^^
   |                 |
   |                 help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0583`.
warning: `kartana` (bin "kartana") generated 4 warnings
error: could not compile `kartana` (bin "kartana") due to 1 previous error; 4 warnings emitted
